# biblionacho-back/app/Http/Requests/Api/Users/UserCreateRequest.php
@@ -22,6 +22,7 @@ class UserCreateRequest extends FormRequest
     public function rules(): array
     {
         return [
+            'identification' => 'required|string|max:20|unique:users',
             'first_name' => 'required|string|max:100',
             'last_name' => 'required|string|max:100',
             'email' => 'required|email|max:100|unique:users',
