# biblionacho-back/app/Models/User.php
@@ -21,6 +21,7 @@ class User extends Authenticatable
      * @var array<int, string>
      */
     protected $fillable = [
+        'identification',
         'first_name',
         'last_name',
         'email',
